(update) estilização básica do componente, ainda sem cores corretas

--- a/src/themes/BaseV2/assets-src/sass/2.components/_panel-seal-relations-tabs.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_panel-seal-relations-tabs.scss
@@ -1,1 +1,100 @@
-@use'../0.settings/mixins' as *;
+@use '../0.settings/mixins' as *;
+
+.seals-relations-background {
+    padding: 30px;
+    background-color: white;
+    
+       p {
+        font-size: 14px;
+        color: #666;
+    }
+
+    hr {
+        border: 0;
+        border-top: 1px solid #e0e0e0;
+        margin: 20px 0;
+    }
+}
+
+.seals-relations-item {
+    margin-bottom: 20px;
+
+    .seals-relations-item-content {
+        padding: 15px;
+        background-color: #fff;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        width: 100%;  
+        max-width: 1200px;  
+        margin: 0 auto;  
+
+        .seals-relations-item-image {
+            margin-right: 20px;
+
+            img {
+                width: 60px;
+                height: 60px;
+                border-radius: 50%;
+                object-fit: cover;
+                background-color: #eee;
+            }
+        }
+
+        .seal-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+
+            h3 {
+                font-size: 18px;
+                color: #333;
+                margin: 0;
+            }
+
+            input[type="checkbox"] {
+                margin-left: 10px;
+                accent-color: #009688;
+            }
+
+            label {
+                font-size: 14px;
+                color: #009688;
+                cursor: pointer;
+            }
+        }
+
+        p {
+            margin: 10px 0;
+            font-size: 14px;
+            color: #666;
+
+            b {
+                color: #333;
+            }
+
+            mc-icon {
+                margin-right: 5px;
+                color: #999;
+            }
+        }
+
+        .seal-footer {
+            margin-top: 20px;
+            text-align: right;
+
+            .button {
+                padding: 8px 16px;
+                color: #ad0505;
+                border-radius: 4px;
+                border-color: red;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+
+                mc-icon {
+                    margin-right: 5px;
+                }
+            }
+        }
+    }
+}
