adicionei o texto de informações embaixo do mapa e o popover de 'saiba mais'

--- a/src/themes/BaseV2/assets-src/sass/2.components/_popover.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_popover.scss
@@ -1,42 +1,88 @@
 @use '../0.settings/mixins'as *;
 
-.popover {
-
-    &__content {
-        position: relative;
-        padding: size(16) size(16);
-
-        .field,
-        form {
-            &:first-child {
-                margin-top: 0;
-            }
-
-            .input {
-                border: 1px solid var(--mc-gray-100);
-                border-radius: var(--mc-border-radius-xs);
-                color: var(--mc-low);
-                font-size: size(16);
-                outline: 0;
-                padding: size(14);
-                width: 100%;
-                min-width: size(213);
-            }
-        }
-
-        .actions {
-            display: flex;
-            gap: size(10);
-        }
+.popover__title {
+    font-size: 1.5rem !important;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 10px;
     }
-}
+    .popover__intro {
+    font-size: 1rem !important;
+    color: #333;
+    margin-bottom: 10px;
+    }
+    .popover__text {
+    font-size: 1rem !important;
+    color: #333;
+    text-align: left;
+    width: 100%;
+    margin-bottom: 20px;
+    }
+    .popover__section {
+    margin-bottom: 10px;
+    }
+    .popover__section-title {
+    font-size: 1rem !important;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 5px;
+    }
+    .popover__footer {
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    }
+    .popover__close-btn {
+    background-color: white;
+    color: #117c83;
+    padding: 10px 90px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px; 
+    font-weight: bold;
+    transition: background-color 0.3s;
+    text-align: center;
+    margin-top: auto;
+    border-color: #117c83;
+    border-width: 2px;
+    }
+    .popover__close-btn:hover {
+    background-color: #87cefa;
+    }
+    .popover {
+    position: relative;
+    padding: 5px;
+    max-width: 550px;
+    max-height: 490px;
+    background: #fff;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    }
+    .info-text {
+    display: flex;
+    align-items: center;
+    }
+    
+    .info-link {
+    align-self: center;
+    font-size: 1rem;
+    color: #117c83;
+    cursor: pointer;
+    margin-left: 5px;
+    }
+    
+    .info-link:hover {
+    color: #87cefa;
+    text-decoration: underline;
+    }
 
 .flex-container {
     display: flex;
     gap: size(5);
     flex-direction: row;
     align-items: flex-start;
-    margin-top: 0px;
 
     .entity-terms{
         .v-popper--theme-dropdown{
@@ -61,26 +107,26 @@
     margin-top: 0rem;
 }
 
-// tooltip unique popover name
+//unique popover name
 div:nth-child(4).col-12.popover__area > div.flex-container.question > div:nth-child(1) > div{
     position: absolute;
     left: 120px;
     top: 5px;
 }
 
-// tooltip unique popover area
+// unique popover area
 div:nth-child(5).col-12.popover__area > div.flex-container.question > div:nth-child(2) > div{
     position: absolute;
     left: 145px;
 }
 
-// tooltip  unique popover funcao
+// unique popover funcao
 div:nth-child(6).col-12.popover__area > div.flex-container.question > div:nth-child(2) > div{
     position: absolute;
     left: 173px;
 }
 
-// tooltip unique popover tag
+//unique popover tag
 div:nth-child(7).col-12.popover__area > div.flex-container.question > div:nth-child(2) > div{
     position: absolute;
     left: 49px;
@@ -89,27 +135,17 @@ div:nth-child(7).col-12.popover__area > div.flex-container.question > div:nth-ch
 //unique local de endereço
 div > div:nth-child(1) > div.flex-container.endereco > div > div{
     position: relative;
-    // left: 171px;
-    // top: 46px;
+    left: 171px;
+    top: 46px;
 }
 
 //unique agente itinerante
 div > div:nth-child(1) > div.flex-container.col-12.itinerante > div > div{
     position: relative;
-    left: 139px;
-    top: 28px;
+    left: 140px;
+    top: 43px;
 }
 
 .popover__area{
     position: relative;
-}
-
-// tooltip Dados de endereço
-div:nth-child(1) > div.flex-container.endereco.col-12 > div:nth-child(1) > div{
-    position: relative;
-    top: 32px;
-    left: 171px;
-    padding-top: 0px;
-    margin-top: 0px;
-    z-index: 9999;
 }
