--- a/src/themes/BaseV2/assets-src/sass/2.components/_panel-seal-relations-tabs.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_panel-seal-relations-tabs.scss
@@ -2,103 +2,96 @@
 
 .seals-relations-background {
     padding: 30px;
-    background-color: white;
-    grid-template-columns: 100% 32%;
-
-    hr {
-        border: 0;
-        border-top: 1px solid #e0e0e0;
-        margin: 20px 0;
-    }
+    
 }
 
 .seals-relations-item {
-    margin-bottom: 20px;
 
-    .seals-relations-item-content {
-        padding: 15px;
-        background-color: #fff;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        width: 100%;  
-        max-width: 1200px;  
-        margin: 0 auto;  
-
+    .seal-relation-content {
+        display: flex;
+        align-items: flex-start;
+    
         .seals-relations-item-image {
             margin-right: 20px;
-
-            img {
-                width: 60px;
-                height: 60px;
-                border-radius: 50%;
-                object-fit: cover;
-                background-color: #eee;
-            }
+            flex-shrink: 0;
         }
-
-        .seal-header {
+    
+        .seal-text-cont {
             display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 100%;
+            flex-direction: column;
+            flex: 1;
 
             h3 {
                 font-size: 18px;
                 color: $projects-500;
-                margin: 0;
+                margin-bottom: 2%;
             }
-
-            input[type="checkbox"] {
-                margin-left: 10px;
-                accent-color: #009688;
-            }
-
-            label {
-                font-size: 14px;
-                color: #009688;
-                cursor: pointer;
-            }
-        }
-
-        p {
-            margin: 10px 0;
-            font-size: 14px;
-            font-family: $font-headings
 
             b {
                 color: #000000;
                 font-weight: $font-weight-bold;
+                margin-bottom: 2%;
             }
 
-            mc-icon {
-                margin-right: 5px;
-                color: #999;
+            .seal-creator {
+                color: $projects-500;
+                font-weight: $font-weight-bold;
+                margin-bottom: 2%;
             }
 
+            p {
+                margin-bottom: 2%;
+            }
+
+            .seal-dates {
+                display: flex;
+                gap: 20px; // Ajuste conforme necessário para o espaçamento entre os parágrafos
+            
+                p {
+                    margin: 0;
+                }
+            
+                mc-icon {
+                    margin-right: 5px; // Espaçamento entre o ícone e o texto
+                }
+            }            
+    
         }
 
-        .seal-creator {
-            color: $projects-500;
-            font-weight: $font-weight-bold;
+        .seal-header {
+
+            input[type="checkbox"] {
+                margin-left: 10px;
+                accent-color: $projects-500;
+            }
+
+            label {
+                font-size: 14px;
+                color: $projects-500;
+                cursor: pointer;
+            }
         }
-
-
+    
         .seal-footer {
             margin-top: 20px;
-            text-align: right;
-
+            display: flex;
+            justify-content: flex-end;
+        
             .button {
                 padding: 8px 16px;
                 color: #ad0505;
                 border-radius: 4px;
                 border-color: red;
                 cursor: pointer;
-                display: flex;
+                display: inline-flex;
                 align-items: center;
-
+        
                 mc-icon {
                     margin-right: 5px;
                 }
             }
         }
+        
     }
+    
 }
