Padronizacao perfis destaque home

--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-card.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-card.scss
@@ -386,6 +386,9 @@
 	}
 
 	&.portrait {
+		display: flex;
+    	flex-direction: column;
+    	justify-content: space-between;
 		.entity-card__header {
 			&.user-details {
 				flex-direction: column;
