--- a/src/themes/BaseV2/assets-src/sass/2.components/_search-filter.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_search-filter.scss
@@ -155,6 +155,12 @@
             display: block;
         }
     }
+    @media (min-width: 901px) {
+        &__filter {
+            display: block;
+        }
+        
+    }
 
     // in list
     .list {
