Ajeitei bugs da localização, arrumei erros de indetação

--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-location.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-location.scss
@@ -3,7 +3,7 @@
 .entity-location {
     .public-location {
         &__label {
-
+            margin-top: 10px;
             font-family: 'Open Sans';
             font-style: normal;
             font-weight: 600;
