FIX - removido alterações desnecessárias no código

--- a/src/themes/BaseV2/assets-src/sass/2.components/_home-developers.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_home-developers.scss
@@ -55,6 +55,9 @@
                 line-height: size(25);
                 text-decoration: none;
             }
+			.github-btn:hover {
+				color: var(--mc-white);
+			}
         }
     }
 }
