adicionei os icones ao lado do texto e arrumei um pouco da formatacao

--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-card.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-card.scss
@@ -675,3 +675,10 @@ article.panel-entity-card.col-6{
     	margin-left: -80px;
 	}
 }
+.icon-model{
+	font-size: size(20) !important;
+	color: #117C83;
+	margin-right: 8px;
+	margin-top: 15px;
+	vertical-align: text-bottom;
+}
