coloquei os dados do back no front de acordo com cada card, estilização final

--- a/src/themes/BaseV2/assets-src/sass/layouts/_entity-tabs.scss
+++ b/src/themes/BaseV2/assets-src/sass/layouts/_entity-tabs.scss
@@ -86,8 +86,8 @@ $iconUrl: 'https://api.iconify.design/ic/baseline-arrow-drop-down.svg' +#{$iconC
 		position: relative;
 		top: -125px;
 		left: 300px;
-        color: rgb(127, 122, 122);               // Sets the font color to grey
-        font-weight: 600;          // Slightly bold (500 is typically medium weight)
+        color: rgb(127, 122, 122);               
+        font-weight: 600;          
         font-size: 14px;
 	}
 
