--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-card.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-card.scss
@@ -598,6 +598,11 @@
 				font-size: 14px;
 				line-height: 19px;
 			}
+			.models &{
+				position: absolute;
+				bottom: 30px;
+				left: 15px;
+			}
 		}
 
 		&.right {
@@ -627,6 +632,11 @@
 				.publish-archived {
 					justify-content: center;
 				}
+			}
+			.models &{
+				position: absolute;
+				bottom: 30px;
+				right: 25px;
 			}
 		}
 
@@ -669,6 +679,7 @@
 article.panel-entity-card.col-6{
 	min-width: 450px;
 	max-width: 450px;
+	min-height: 530px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 	.panel-entity-card__header--info{
 		margin-top: 85px;
