--- a/src/themes/BaseV2/assets-src/sass/2.components/_mc-breadcrumb.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_mc-breadcrumb.scss
@@ -17,7 +17,7 @@
     ul {
         align-items: center;
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         gap: size(5);
         max-width: size(1170);
         padding: size(8) size(10);
@@ -65,6 +65,7 @@
 
     li:last-child {
         font-weight: bold;
+        flex: 1;
 
         &::after {
             content: none;
@@ -77,7 +78,6 @@
         text-transform: uppercase;
         font-size: size(14);
         white-space: nowrap;
-        max-width: size(400);
         overflow: hidden;
         text-overflow: ellipsis;
     }
