feat: atualiza responsividade no mobile e separa css do modelos

--- a/src/themes/BaseV2/assets-src/sass/theme-BaseV2.scss
+++ b/src/themes/BaseV2/assets-src/sass/theme-BaseV2.scss
@@ -32,6 +32,7 @@
 @import '2.components/entity-actions';
 @import '2.components/entity-activity-card';
 @import '2.components/entity-card';
+@import '2.components/entity-models-card';
 @import '2.components/entity-cover';
 @import '2.components/entity-data';
 @import '2.components/entity-file';
